# soaring-anomalous-transport

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: docs.yml  tests.yml
configs/: delta_download.yaml  ffvl_download.yaml  para_download.yaml  preprocessing.yaml
data/: README.md  seasons_index.csv
data/hang_gliders/: seasons_index.csv
data/paragliders/: seasons_index.csv
docs/: index.md  reference.md
docs/guide/: bibliography.md  data-source.md  downloading.md  igc-to-flight.md  installation.md  preprocessing-pipeline.md
logbook/: logbook.tex
scripts/: build_docs.sh
scripts/reporting/: estimate_savgol_timescales.py  generate_altitude_noise_figure.py  generate_census_stats.py  generate_preproc_figure.py  generate_stats.py  generate_timeline.py  refresh_seasons_index.py
src/soaring/: __init__.py
src/soaring/acquisition/: __init__.py
src/soaring/acquisition/ffvl/: __init__.py  catalog.py  catalog_xml.py  cli.py  config.py  download.py  housekeeping.py  http.py  naming.py  seasons.py  verify.py
src/soaring/analysis/: __init__.py  altitude_noise.py  igc.py  preprocessing.py
tests/acquisition/: test_catalog_xml.py  test_cli.py  test_config.py  test_download.py  test_housekeeping.py  test_naming.py  test_seasons.py  test_verify.py
tests/analysis/: test_altitude_noise.py  test_igc.py  test_preprocessing.py
tests/fixtures/: ffvl_1999.xml  sample_flight.igc
thesis/: main.tex  references.bib
thesis/appendices/: A-ctrw.tex  B-psd.tex  C-implementation.tex  geodesy.tex
thesis/appendices/impl/: C1-acquisition.tex  C2-dataset.tex  C3-next-steps.tex
thesis/sections/: 01-introduction.tex  02-data-acquisition.tex  03-dataset.tex  04-next-steps.tex
